Make onChange, reflow system in comboboxes/lists better (bug 112241).  r=rods, sr=kin